# memvid

./: .gitignore  AGENTS.md  Cargo.toml  FORK_NOTE.md  justfile
crates/memvid-mcp/: Cargo.toml  README.md
crates/memvid-mcp/src/: main.rs
examples/: basic_usage.rs  chinese_recall.rs  clip_visual_search.rs  pdf_ingestion.rs
src/: extract.rs  extract_budgeted.rs  lib.rs
src/memvid/: timeline.rs
src/memvid/search/: api.rs  mod.rs
src/reader/: mod.rs
src/search/: mod.rs
src/search/tantivy/: query.rs  schema.rs
src/table/: layout.rs  pdf_extractor.rs
tests/: doctor_recovery.rs  lifecycle.rs  mutation.rs  search.rs  xlsx_structured.rs
