[package]
name = "memvid-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
publish = false

[dependencies]
base64 = "0.21.7"
hex = "0.4.3"
memvid-core = { path = "../..", package = "memvid-core" }
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
temporal_track = ["memvid-core/temporal_track"]

[dev-dependencies]
tempfile = "3.10.1"
